# DOSM-Particle-Dynamics

./: $  .gitignore  .~lock.dosmdata.csv#  CMakeLists.txt  dosmplot  dosmplotcsv  dosmplotofl  error.txt  output.txt  readme.md
ExamenCode2026/: Examen_code_simulation.docx  examen_270226_mci  examen_270226_xyz
doc/: particule
impl/: dosmParallel.hpp  dosmParallelKokkos.tpp  dosmTensor.hpp  dosmTensorEigen.tpp
include/: dosmBasic.hpp  dosmConfig.hpp  dosmEntity.hpp  dosmFactor.hpp  dosmLawLJ.hpp  dosmLawLJP.hpp  dosmLawLJPNB.hpp  dosmLawLJPNBCL_OMP.hpp  dosmLawLJPNB_OMP.hpp  dosmLawLennardJones.hpp  dosmLawLennardJonesPeriodic.hpp  dosmLawVV.hpp  dosmLawVelocityVerlet.hpp  dosmLog.hpp  dosmMetric.hpp  dosmParallelCPU.hpp  dosmParallelKokkos.hpp  dosmParticle.hpp  dosmSocketPublisher.hpp
interface/: idosmLaw.hpp  idosmParallel.hpp  idosmSocket.hpp
scripts/: monitorLJ.py
src/: dosmEntity.cpp  dosmFactor.cpp  dosmLawLJ.cpp  dosmLawLJP.cpp  dosmLawLJPNB.cpp  dosmLawLJPNBCL_OMP.cpp  dosmLawLJPNB_OMP.cpp  dosmLawLennardJones.cpp  dosmLawLennardJonesPeriodic.cpp  dosmLawVV.cpp  dosmLawVelocityVerlet.cpp  dosmMetric.cpp  dosmParallelCPU.cpp  dosmParallelKokkos.cpp  dosmParticle.cpp  dosmSocketPublisher.cpp  main.cpp
